fixed jumping a bit

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,9 @@
 
 body{
     background-color: hsl(180, 52%, 96%);
+    
+}
+html {
+    width:100vw;
+    overflow-x:hidden;
 }
